# qreki_py

./: .gitattributes  QREKI.AWK  QREKI.DOC  README.md  _qreki.c  pyproject.toml  qreki.c  qreki.py  setup.cfg  setup.py  test_qreki.py
.github/workflows/: build_windowns_wheels.yml
clinic/: qreki.c.h
qreki/: __init__.py  __main__.py  qreki.py  qreki.pyi
src/: _qreki.c
src/clinic/: _qreki.c.h
src/qreki/: __init__.py  __main__.py  _qreki.pyi  qreki.py
test/: test_qreki.py
