[metadata]
name = qreki
version = attr: qreki.VERSION
author = fgshun
author_email = fgshun@gmail.com
url = https://github.com/fgshun

[options]
py_modules = qreki
python_requires = >=3.9
setup_requires = pytest-runner
tests_requires = pytest

[options.package_data]
qreki = py.typed, *.pyi

[aliases]
test=pytest
